--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,7 +12,7 @@ body {
 } */
 .home {
     width: 100%;
-    height: 70vh;
+    height: 90vh;
     /* background-image: url('../image/background/background.jpg'); */
     background-position: center top;
     background-size: cover;
@@ -183,9 +183,11 @@ a:focus {
 .list-group.mobile .list-group-item {
     border-bottom: 2px solid #4b4c4d;
 }
-.list-group.mobile .list-group-item.active:last-child {
-    border-bottom-width: 2px;
+
+.list-group-flush.mobile>.list-group-item:last-child {
+    border-bottom-width: 0;
 }
+
 .list-group.mobile .list-group-item.active {
     border-top-width: 0px;
     border-bottom: 2px solid #007bff;
