--- a/templates/tags/_menu.html
+++ b/templates/tags/_menu.html
@@ -1,17 +1,19 @@
 {% load extras %}
 {% load mptt_tags %}
 {% recursetree menus %}
+{% if dimension == "mobile" %}
 <li class="clone d-lg-none {% if node.slug in request.path %}active {% endif %}list-group-item menu-list bg-transparent">
     {% if not node.is_leaf_node %}
     <a href="{{ node|form_url }}" class="d-inline-block text-capitalize">{{ node.name }}</a>
     <button class="p-0 float-right menu-data-toggle d-inline-block bg-transparent text-decoration-none border-0 data-toggle" aria-haspopup="true" data-target="#{{ node.name }}Submenu" aria-controls="{{ node.name }}Submenu" aria-expanded="false" data-toggle="collapse" role="button" ><i class="fas fa-xs fa-plus text-white-50"></i></button>
-    <ul class="collapse list-unstyled bg-transparent p-0 list-group list-group-flush" id="{{ node.name }}Submenu">
+    <ul class="border-left collapse list-unstyled bg-transparent p-0 list-group list-group-flush" id="{{ node.name }}Submenu">
         {{ children }}
     </ul>
     {% else %}
     <a href="{{ node|form_url }}" class="text-capitalize">{{ node.name }}</a>
     {% endif %}
 </li>
+{% else %}
 <li class="px-lg-1 {% if node.slug in request.path %}active {% endif %}d-none d-lg-block border-0 list-group-item bg-transparent">
     {% if not node.is_leaf_node %}
     <a href="{{ node|form_url }}" class="d-inline-block text-capitalize">{{ node.name }}</a>
@@ -23,4 +25,5 @@
     <a href="{{ node|form_url }}" class="text-capitalize">{{ node.name }}</a>
     {% endif %}
 </li>
+{% endif %}
 {% endrecursetree %}
