--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -45,8 +45,8 @@
                     <a href="/"><img src="{% static 'image/favicon.ico' %}" class="logo-image" /></a>
                 </div>
                 <div id="cartnav-mobile" class="animate__animated animate__slideInRight"> 
-                    <button class="bg-transparent remove-outline btn text-decoration-none text-white p-0 font-weight-bold" data-toggle="modal" data-target="#searchModal">
-                        <i class="fas fa-search text-dark"></i>
+                    <button class="bg-transparent remove-outline btn text-decoration-none text-dark p-0 font-weight-bold" data-toggle="modal" data-target="#searchModal">
+                        <i class="fas fa-search"></i>
                     </button>
                     <a id="cart" href="{% url 'cart:cart-detail' %}" class="btn btn-link text-decoration-none text-dark bg-transparent d-inline-block d-lg-none" role="button">
                         <i class="fas fa-box-open position-relative align-middle text-center" :class="{'badger': numItems > 0}" :data-count="numItems"></i>
