--- a/static/css/base.css
+++ b/static/css/base.css
@@ -184,7 +184,7 @@ a:focus {
     border-bottom: 2px solid #4b4c4d;
 }
 
-.list-group-flush.mobile>.list-group-item:last-child {
+.list-group-flush.mobile .list-group-item:last-child {
     border-bottom-width: 0;
 }
 
