--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -7,7 +7,7 @@
       <div class="row justify-content-center justify-content-md-between">
         <div class="col-md-7 my-2 col-11 animate__animated animate__lightSpeedInLeft animate__delay-1s animated__slower signupimageg my-md-auto">
           {% include 'svg/welcoming.svg' %}
-          {% comment %} <img src="{% static 'image/welcoming.png' %}" class="animate__animated animate__backInLeft animate__slower img-fluid img-responsive img-thumbnail" /> {% endcomment %}
+          {% comment %} <img src="{% static 'image/welcoming.png' %}" class="animate__animated animate__backInLeft animate__slower img-fluid  img-thumbnail" /> {% endcomment %}
         </div>
         <div class='col-11 col-md-5 animate__animated animate__fadeIn animate__slow animate__delay-2s text-white'>
           <h1 class="text-info">Sign Up</h1>
