--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -3,16 +3,14 @@
 {% load thumbnail %}
 {% block style %}
 <style>
-.back-in-stock .lSPager.lSpg > li a{
-    background-color: transparent!important;
-    border: 1px solid white;
+.home-button{
+    background-color:#1c1b1b;
+    font-size:10px;
+    color: white;
 }
-.back-in-stock .lSPager.lSpg > li.active a {
-    background-color: white!important;
-    border: 1px solid white;
-}
-.back-in-stock .lSPager.lSpg {
-    bottom:0px;
+
+.home-button.btn-outline-danger {
+    border-color: transparent;
 }
 
 .swiper-button-next:after, 
@@ -39,7 +37,6 @@
     background: #000;
 }
 </style>
-
 {% endblock style %}
 
 {% block content %}
@@ -69,12 +66,13 @@
                 v-swiper:swiper-first="swiperOptions"
                 v-if="!bestSellerLoading"
                 key="bestseller"
+                data-aos="fade-up"
             >
                 <div class="swiper-wrapper">
                     <div class="swiper-slide card bg-transparent border-0" v-for="trouser in bestSellerTrousers" :key="trouser.id">
                         <a :href="trouser.url">
                             <div class="d-flex bg-transparent align-items-center justify-content-center overflow-hidden">
-                                <img :src="trouser.first_variant.first_image.file" class="img-fluid img-responsive mx-auto card-img-top" alt="image">
+                                <img :src="trouser.first_variant.first_image.file" class="img-fluid  mx-auto card-img-top" alt="image">
                             </div>
                             <div class="card-body py-0">
                                 <p class="card-title mb-1  font-weight-bold" style="font-size:10px;">[[ trouser.first_variant.color ]]<br>[[ trouser.name ]]</p>
@@ -96,23 +94,23 @@
                 <div class="swiper-pagination swiper-pagination-bullets"></div>
             </div>
         </transition>
-        <a href="{% url 'menu:trouser_by_category' 'bestsellers' %}" class="btn btn-lg px-5 py-3 font-weight-bold rounded-0 text-center mx-auto text-white" style="background-color:#1c1b1b;font-size:11px;" role="button">VIEW ALL PRODUCTS</a>
+        <a href="{% url 'menu:trouser_by_category' 'best-sellers' %}" class="btn btn-lg home-button px-5 btn-outline-danger py-3 font-weight-bold rounded-0 text-center mx-auto" role="button">VIEW ALL PRODUCTS</a>
     </div>
     <div class="row mb-4 back-in-stock-md justify-content-between">
         {% for feature in home.features.all %}
-        <div class="col-6 col-xl-3 card mb-3 bg-transparent border-0">
+        <div class="col-6 col-xl-3 card mb-3 bg-transparent border-0" data-aos="zoom-in">
             <div class="d-flex bg-transparent align-items-center justify-content-center overflow-hidden">
                 <picture>
                     {% thumbnail feature.image "325x577" crop="center" as im %}
                         <source srcset="{{ im.url }}" type="image/svg+xml" media="(max-width: 991px)">
                     {% endthumbnail %}
-                    {% thumbnail feature.image "450x799" crop="center" as im %}
+                    {% thumbnail feature.image "450x799" crop="center" as im %}
                         <source srcset="{{ im.url }}" type="image/svg+xml" media="(min-width: 992px) and (max-width: 1199px)">
                     {% endthumbnail %}
                     {% thumbnail feature.image "260x453" crop="center" as im %}
                         <source srcset="{{ im.url }}" type="image/svg+xml" media="(min-width: 1200px)">
                     {% endthumbnail %}
-                    <img src="{{ feature.image.url }}" class="img-fluid img-responsive mx-auto card-img-top" alt="...">
+                    <img src="{{ feature.image.url }}" class="img-fluid  mx-auto card-img-top" alt="...">
                 </picture>
             </div>
             <div class="card-img-overlay flex-column justify-content-md-end align-items-md-start p-5 d-none d-md-flex text-white">
@@ -139,12 +137,13 @@
                 key="newarrival"
                 class="swiper mx-0 pb-4 col-12"
                 v-swiper:swiper="swiperOptions"
+                data-aos="fade-up"
             >
                 <div class="swiper-wrapper">
                     <div class="swiper-slide card bg-transparent border-0" v-for="trouser in newArrivalTrousers" :key="trouser.id">
                         <a :href="trouser.url">
                             <div class="d-flex bg-transparent align-items-center justify-content-center overflow-hidden">
-                                <img :src="trouser.first_variant.first_image.file" class="img-fluid img-responsive mx-auto card-img-top" alt="image">
+                                <img :src="trouser.first_variant.first_image.file" class="img-fluid  mx-auto card-img-top" alt="image">
                             </div>
                             <div class="card-body py-0">
                                 <p class="card-title font-weight-bold mb-1" style="font-size:10px;">[[ trouser.first_variant.color ]]<br>[[ trouser.name ]]</p>
@@ -166,9 +165,9 @@
                 <div class="swiper-pagination swiper-pagination-bullets"></div>
             </div>
         </transition>
-            <a href="{% url 'menu:trouser_by_category' 'new-arrivals' %}" class="btn btn-lg rounded-0 px-5 py-3 font-weight-bold text-center mx-auto text-white" style="background-color:#1c1b1b;font-size:11px;" role="button">VIEW ALL PRODUCTS</a>
+            <a href="{% url 'menu:trouser_by_category' 'new-arrivals' %}" class="btn btn-lg rounded-0 home-button px-5 btn-outline-danger py-3 font-weight-bold text-center mx-auto" role="button">VIEW ALL PRODUCTS</a>
     </div>
-    <div class="row no-gutters mb-4">
+    <div class="row no-gutters mb-4" data-aos="zoom-in-up">
         <div class="col-12 px-3">
             {{ home.get_markdown_info }}
         </div>
@@ -209,6 +208,7 @@
     });
     $('.vegas-timer').addClass('d-none')
     $('.vegas-content-scrollable').addClass('d-flex align-items-end justify-content-start p-md-5 py-5 px-4 w-100')
+
     Vue.use(VueAwesomeSwiper)
     const index = new Vue({
         el: '#index',
@@ -269,6 +269,12 @@
                 newArrivalLoading: true,
                 bestSellerLoading: true,
             }
+        },
+        created(){
+            AOS.init();
+        },
+        updated(){
+            AOS.refreshHard();
         },
         mounted(){
             this.newArrival();
