--- a/templates/shop/item_by_category.html
+++ b/templates/shop/item_by_category.html
@@ -306,11 +306,8 @@
         template: `                        
                     <div id="" class="col-6 col-md-4 col-lg-3">
                         <a :href=url class=""> 
-                            <div class="card border-0 bg-transparent d-flex justify-content-center align-items-center lazy-container" style="min-height:210px;">
+                            <div data-aos="zoom-in" class="card border-0 bg-transparent d-flex justify-content-center align-items-center lazy-container" style="min-height:210px;">
                                 <img :data-src="image" class="card-img-top img-fluid lazy-image">
-                                {% comment %} <div class="spinner-grow text-dark spinner spinner-grow-sm" role="status">
-                                    <span class="sr-only">Loading...</span>
-                                </div> {% endcomment %}
                                 <div class="lds-ellipsis text-dark spinner">
                                     <div></div>
                                     <div></div>
@@ -369,8 +366,10 @@
             }
         },
         created(){
-            console.log("created")
-
+            AOS.init();
+        },
+        updated(){
+            AOS.refreshHard();
         },
         beforeUpdate(){
             if (this.orderShouldRender && this.sortedShouldRender || this.orderShouldRender && this.colorSort || this.colorSort && this.sortedShouldRender){
@@ -380,9 +379,6 @@
         },
         mounted(){
             console.log("mounted")
-        },
-        updated(){
-
         },
         computed: {
             get_total_price: function(){
